--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.ts"
+    "dev": "nodemon index.ts",
+    "swagger": "node ./swagger/swagger.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.8",
     "prisma": "^5.13.0",
+    "swagger-autogen": "^2.23.7",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
@@ -22,12 +24,14 @@
     "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/swagger-ui-express": "^4.1.6",
     "@vinejs/vine": "^2.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
+    "swagger-ui-express": "^5.0.0",
     "zod": "^3.23.6"
   }
 }
